fixed rtf sidebar to stay visibnle in outline treeview when inking is on.  changed highlighting based on hover for anitmode buttons to test on msft duo w/ touch.

--- a/src/client/views/collections/TreeView.scss
+++ b/src/client/views/collections/TreeView.scss
@@ -83,7 +83,7 @@
             display: none;
     }
     .formattedTextBox-cont {
-        .formattedTextbox-sidebar {
+        .formattedTextbox-sidebar, .formattedTextbox-sidebar-inking {
             overflow: visible !important;
             border-left: unset;
         }
